mostly changed admin things and fixed some bugs

--- a/School-Managment-Backend/src/main/resources/application.properties
+++ b/School-Managment-Backend/src/main/resources/application.properties
@@ -18,8 +18,8 @@ bezkoder.app.jwtExpirationMs= 86400000
 ## MySQL
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/db_school_managment?serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=springuser
-spring.datasource.password=springpassword
+spring.datasource.username=DigiTafel
+spring.datasource.password=$RFV5tgb
 
 #`hibernate_sequence' doesn't exist
 #spring.jpa.hibernate.use-new-id-generator-mappings=false
