--- a/School-Managment-Backend/pom.xml
+++ b/School-Managment-Backend/pom.xml
@@ -52,6 +52,10 @@
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.school</groupId>
 			<artifactId>School-Managment-Frontend</artifactId>
 			<version>${project.version}</version>
@@ -83,6 +87,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-jul</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
