--- a/School-Managment-Backend/src/main/resources/application.properties
+++ b/School-Managment-Backend/src/main/resources/application.properties
@@ -21,10 +21,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_school_managment?serverTime
 spring.datasource.username=DigiTafel
 spring.datasource.password=$RFV5tgb
 
+
+
+
+
 #`hibernate_sequence' doesn't exist
 #spring.jpa.hibernate.use-new-id-generator-mappings=false
 #spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-
 
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
@@ -33,3 +36,15 @@ server.port=8080
 spring.resources.static-locations=classpath:/META-INF/resources/frontend/prod/
 spring.data.rest.basePath=/api
 server.address=0.0.0.0
+server.ssl.enabled=false
+
+logging.level.org.apache=DEBUG
+#logging.level.org.springframework.web: trace
+#logging.level.org.apache: trace
+
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.springframework.transaction=DEBUG
+#logging.level.org.hibernate=DEBUG
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
