--- a/School-Managment-Backend/src/main/resources/application.properties
+++ b/School-Managment-Backend/src/main/resources/application.properties
@@ -22,9 +22,6 @@ spring.datasource.username=DigiTafel
 spring.datasource.password=$RFV5tgb
 
 
-
-
-
 #`hibernate_sequence' doesn't exist
 #spring.jpa.hibernate.use-new-id-generator-mappings=false
 #spring.jpa.properties.hibernate.jdbc.time_zone=UTC
@@ -38,11 +35,11 @@ spring.data.rest.basePath=/api
 server.address=0.0.0.0
 server.ssl.enabled=false
 
-logging.level.org.apache=DEBUG
+#logging.level.org.apache=DEBUG
 #logging.level.org.springframework.web: trace
 #logging.level.org.apache: trace
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.springframework.transaction=DEBUG
 #logging.level.org.hibernate=DEBUG
