--- a/School-Managment-Backend/pom.xml
+++ b/School-Managment-Backend/pom.xml
@@ -79,11 +79,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-hateoas</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -113,18 +108,16 @@
 			<artifactId>pdfbox-tools</artifactId>
 			<version>2.0.8</version>
 		</dependency>
-		<dependency>
-			<groupId>com.school</groupId>
-			<artifactId>School-Managment-Frontend</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>com.school</groupId> -->
+<!-- 			<artifactId>School-Managment-Frontend</artifactId> -->
+<!-- 			<version>0.0.1-SNAPSHOT</version> -->
+<!-- 		</dependency> -->
 	</dependencies>
 	<build>
 		<finalName>School-Managment</finalName>
 		<sourceDirectory>src/main/java</sourceDirectory>
 		<plugins>
-
-
 			<!-- Compile the project's source -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
