--- a/School-Managment-Frontend/src/main/web/angular.json
+++ b/School-Managment-Frontend/src/main/web/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "node_modules/primeng/resources/themes/nova-light/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css",
@@ -95,6 +96,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "node_modules/angular-calendar/css/angular-calendar.css",
               "node_modules/angular-calendar/css/angular-calendar.css",
               "src/styles.css"
