--- a/School-Managment-Frontend/src/main/web/package.json
+++ b/School-Managment-Frontend/src/main/web/package.json
@@ -13,57 +13,57 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.12",
+    "@angular/animations": "^9.1.13",
     "@angular/cdk": "^9.2.4",
-    "@angular/common": "^9.0.7",
-    "@angular/compiler": "^9.0.7",
-    "@angular/core": "^9.0.7",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
     "@angular/fire": "^5.4.2",
-    "@angular/forms": "^9.0.7",
-    "@angular/localize": "^9.1.12",
+    "@angular/forms": "^9.1.13",
+    "@angular/localize": "^9.1.13",
     "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "^9.0.7",
-    "@angular/platform-browser-dynamic": "^9.0.7",
-    "@angular/router": "^9.0.7",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/router": "^9.1.13",
     "@fortawesome/angular-fontawesome": "^0.5.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
-    "@ngrx/store": "^9.2.0",
+    "@ngrx/store": "^9.2.1",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "@stomp/stompjs": "^5.4.4",
-    "angular-gridster2": "^9.3.3",
-    "bootstrap": "^4.5.2",
+    "angular-gridster2": "^9.3.4",
+    "bootstrap": "^4.5.3",
     "primeflex": "^1.3.1",
     "primeicons": "^2.0.0",
     "primeng": "^9.1.3",
-    "rxjs": "^6.5.5",
+    "rxjs": "^6.6.3",
     "sockjs-client": "^1.5.0",
-    "tslib": "^1.13.0",
+    "tslib": "^1.14.1",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.12",
-    "@angular/cli": "^9.1.12",
-    "@angular/compiler-cli": "^9.0.7",
-    "@angular/language-service": "^9.0.7",
+    "@angular-devkit/build-angular": "^0.901.13",
+    "@angular/cli": "^9.1.13",
+    "@angular/compiler-cli": "^9.1.13",
+    "@angular/language-service": "^9.1.13",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^5.2.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.2.1",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "lite-server": "^2.5.4",
+    "lite-server": "^2.6.1",
     "protractor": "^7.0.0",
     "ts-node": "^8.10.2",
     "tslint": "~5.15.0",
     "tslint-angular": "^3.0.3",
-    "typescript": "^3.7.5"
+    "typescript": "3.8.3"
   }
 }
