updated, linted and changed over to scss

--- a/School-Managment-Frontend/src/main/web/angular.json
+++ b/School-Managment-Frontend/src/main/web/angular.json
@@ -31,7 +31,7 @@
               "node_modules/primeflex/primeflex.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -129,6 +129,11 @@
           }
         }
       }
+    }
+  },
+  "schematics": {
+    "@schematics/angular:component": {
+      "style": "scss"
     }
   },
   "defaultProject": "school-managment"
