--- a/School-Managment-Frontend/src/main/web/package.json
+++ b/School-Managment-Frontend/src/main/web/package.json
@@ -62,6 +62,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "lite-server": "^2.6.1",
     "protractor": "~7.0.0",
+    "schematics-scss-migrate": "^1.3.13",
     "ts-node": "^8.10.2",
     "tslint": "~6.1.0",
     "tslint-angular": "^3.0.3",
