--- a/School-Managment-Frontend/src/main/web/angular.json
+++ b/School-Managment-Frontend/src/main/web/angular.json
@@ -25,13 +25,11 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "node_modules/primeng/resources/themes/nova/theme.css",
-              "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeicons/primeicons.css",
-              "node_modules/primeflex/primeflex.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.scss"
+              "./node_modules/primeng/resources/themes/nova/theme.css",
+              "./node_modules/primeng/resources/primeng.min.css",
+              "./node_modules/primeicons/primeicons.css",
+              "src/styles.scss",
+              "./node_modules/primeflex/primeflex.css"
             ],
             "scripts": []
           },
@@ -96,9 +94,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "node_modules/angular-calendar/css/angular-calendar.css",
-              "node_modules/angular-calendar/css/angular-calendar.css",
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
