--- a/School-Managment-Frontend/src/main/web/package.json
+++ b/School-Managment-Frontend/src/main/web/package.json
@@ -32,14 +32,15 @@
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "@ngrx/store": "^9.2.1",
-    "@ngx-translate/core": "^12.1.2",
-    "@ngx-translate/http-loader": "^4.0.0",
+    "@ngx-translate/core": "^13",
+    "@ngx-translate/http-loader": "^6.0.0",
     "@stomp/stompjs": "^5.4.4",
+    "angular-calendar": "^0.28.22",
     "angular-gridster2": "^9.3.4",
     "bootstrap": "^4.5.3",
-    "primeflex": "^1.3.1",
+    "primeflex": "^2.0.0",
     "primeicons": "^4.0.0",
-    "primeng": "^11.2.3",
+    "primeng": "^11.3.0",
     "rxjs": "^6.6.3",
     "sockjs-client": "^1.5.0",
     "tslib": "^2.0.0",
@@ -55,7 +56,7 @@
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.1",
+    "karma": "^6.1.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
