--- a/School-Managment-Backend/pom.xml
+++ b/School-Managment-Backend/pom.xml
@@ -108,11 +108,11 @@
 			<artifactId>pdfbox-tools</artifactId>
 			<version>2.0.8</version>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.school</groupId> -->
-<!-- 			<artifactId>School-Managment-Frontend</artifactId> -->
-<!-- 			<version>0.0.1-SNAPSHOT</version> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-properties-migrator</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>School-Managment</finalName>
