More Smaller Tweaks, slowly getting ready for first releas

--- a/School-Managment-Backend/src/main/resources/application.properties
+++ b/School-Managment-Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # App Properties
-bezkoder.app.jwtSecret= schoolManagmentKey
-bezkoder.app.jwtExpirationMs= 86400000
+school.app.jwtSecret= schoolManagmentKey
+school.app.jwtExpirationMs= 18000000
 
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.driverClassName=org.h2.Driver
