--- a/School-Managment-Frontend/src/main/web/package.json
+++ b/School-Managment-Frontend/src/main/web/package.json
@@ -38,11 +38,13 @@
     "angular-calendar": "^0.28.22",
     "angular-gridster2": "^9.3.4",
     "bootstrap": "^4.5.3",
+    "net": "^1.0.2",
     "primeflex": "^2.0.0",
     "primeicons": "^4.0.0",
     "primeng": "^11.4.2",
     "rxjs": "^6.6.3",
-    "sockjs-client": "^1.5.0",
+    "sockjs-client": "^1.5.1",
+    "stompjs": "^2.3.3",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
   },
