--- a/School-Managment-Frontend/src/main/web/package.json
+++ b/School-Managment-Frontend/src/main/web/package.json
@@ -55,6 +55,8 @@
     "@angular/language-service": "^11.2.4",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/sockjs-client": "^1.5.0",
+    "@types/stompjs": "^2.3.4",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
