--- a/School-Managment-Frontend/src/main/web/package.json
+++ b/School-Managment-Frontend/src/main/web/package.json
@@ -34,18 +34,16 @@
     "@ngrx/store": "^9.2.1",
     "@ngx-translate/core": "^13",
     "@ngx-translate/http-loader": "^6.0.0",
-    "@stomp/stompjs": "^5.4.4",
     "angular-calendar": "^0.28.22",
     "angular-gridster2": "^9.3.4",
     "bootstrap": "^4.5.3",
-    "net": "^1.0.2",
     "primeflex": "^2.0.0",
     "primeicons": "^4.0.0",
     "primeng": "^11.4.2",
     "rxjs": "^6.6.3",
     "sockjs-client": "^1.5.1",
-    "stompjs": "^2.3.3",
     "tslib": "^2.0.0",
+    "websocket": "^1.0.34",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
@@ -53,10 +51,11 @@
     "@angular/cli": "^11.2.3",
     "@angular/compiler-cli": "^11.2.4",
     "@angular/language-service": "^11.2.4",
+    "@stomp/stompjs": "^6.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/sockjs-client": "^1.5.0",
     "@types/stompjs": "^2.3.4",
+    "@types/websocket": "^1.0.2",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
