--- a/School-Managment-Backend/src/main/resources/application.properties
+++ b/School-Managment-Backend/src/main/resources/application.properties
@@ -41,3 +41,5 @@ server.ssl.enabled=false
 #logging.level.org.hibernate=DEBUG
 #logging.level.org.hibernate.SQL=debug
 #logging.level.org.hibernate.type.descriptor.sql=trace
+
+#message.properties.filelocation=C:\\Users\\benja\\Desktop\\New folder\\message.properties
