--- a/School-Managment-Backend/pom.xml
+++ b/School-Managment-Backend/pom.xml
@@ -7,11 +7,12 @@
 	<parent>
 		<groupId>com.school</groupId>
 		<artifactId>School-Managment</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>School-Managment-Backend</artifactId>
 	<properties>
 		<java.version>1.8</java.version>
+		<start-class>Test</start-class>
 	</properties>
 
 	<packaging>jar</packaging>
@@ -107,6 +108,10 @@
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox-tools</artifactId>
 			<version>2.0.23</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
