--- a/School-Managment-Backend/src/main/resources/application.properties
+++ b/School-Managment-Backend/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.datasource.password=$RFV5tgb
 spring.jpa.hibernate.ddl-auto=update
 
 server.port=8080
-spring.resources.static-locations=classpath:/META-INF/resources/frontend/prod/
+spring.web.resources.static-locations=classpath:/META-INF/resources/frontend/prod/
 spring.data.rest.basePath=/api
 server.address=0.0.0.0
 server.ssl.enabled=false
