--- a/School-Managment-Frontend/src/main/web/package.json
+++ b/School-Managment-Frontend/src/main/web/package.json
@@ -37,6 +37,7 @@
     "angular-calendar": "^0.28.22",
     "angular-gridster2": "^9.3.4",
     "bootstrap": "^4.5.3",
+    "luxon": "^2.0.2",
     "primeflex": "^2.0.0",
     "primeicons": "^4.0.0",
     "primeng": "^11.4.2",
@@ -54,6 +55,7 @@
     "@stomp/stompjs": "^6.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/luxon": "^2.0.3",
     "@types/stompjs": "^2.3.4",
     "@types/websocket": "^1.0.2",
     "codelyzer": "^6.0.0",
